# tileSetter

./: dataLoader.py  htmile.py  nameBuilder.py  petDB.py  pyleSetter.py  requirements.txt  setup.cfg  setup.py  tileSet-Starter-Notebook.ipynb  tileSetter Notebook.ipynb  tileSetter-Starter.ipynb  tilesetter-testing.ipynb  tst.py
.ipynb_checkpoints/: tileSetter Notebook-checkpoint.ipynb  tileSetter-Starter-checkpoint.ipynb  tilesetter-testing-checkpoint.ipynb
HTML/: ipyn_style.css  petpageTab.js  petpageTab.user.js  style.css  tileSet.html
data/: stuck-strings.csv
data/prefixes/: abc.csv  def.csv  ghi.csv  jkl.csv  mno.csv  pqr.csv  stu.csv
docs/: index.md  name_format.md
pyleset/: __init__.py  _settings.py  dataLoader.py  defaults.py  htmile.py  nameBuilder.py
pyleset/data/_defaults/: stuck-strings.csv
pyleset/data/prefixes/: abc.csv  mno.csv
