[metadata]
name = pyleset
version = attr: pyleset.version
description = Python library for tilesetting Neopets in the Neopian Pound
long_description=open('README.md').read()

[options]
package_dir =
  =pyleset
include_package_data = True

[options.packages.find]
where = pyleset



    # name='pyleset',
    # version='0.1.0',
    # author='Cady | UN: penguinluver222',
    # description='Python library for tilesetting Neopets in the Neopian Pound',
    # long_description=open('README.md').read(),
    # packages=find_packages(['pyleset']),
    # install_requires['pandas==1.2.4','numpy'],
    # include_package_data=True,
    # package_data={'': ['data/*.csv']},
    # classifiers=[
    #     'Programming Language :: Python',
    #     'Programming Language :: Python :: 3',
    #     'Programming Language :: Python :: 3.8']
